@@ -1,8 +1,8 @@
 [tryton]
 version=4.1.0
 depends:
-    ir
     account_invoice
+    account_payment
 xml:
     payment_type.xml
     party.xml
